LIST OF CHANGES FOR NPG-QC PACKAGE

 - utility QC feature: db tables, DBIx classes, retrieval

release 64.3.1
 - error in a statement for data update is fixed

release 64.3 
 - DBIx schema loader script: automatically add npg_qc::Schema::Composition
 - drop unique consctraint for (id_run, position and tag_index) columns;
 - make a foreign key to seq_composition table not nullable and set
     a unique constraint on the foreign key column in entity tables;
 - do not use id_run, position and tag index column values from
     entity tables, compute rpt lists from compositions;
 - do not list explisitly id_run, position and tag_index in return
     datastructes for both get and save outcomes methods
 - a method to find a composition without creating one

release 64.2
 - Cannot have default Moose constructor in derived DBIx classes - fix for
     custom MqcOutcomeEnt resultset
 - DBIx achema loader script: automatically add npg_qc::Schema::Composition
     role when generating result classes for autoqc tables
 - DBIx classes for autoqc db tables:
     remove 'create_component' factory method which was only needed
      for back-filling composition foreign key;
     inherit 'composition' attribute from a newly created
      npg_qc::Schema::Composition role;
     document 'composition' attribute
 - composition-enabled manual qc:
     db tables linked to the seq_composition table;
     search proceeds via releated composition tables;
     when mqc outcomes are saved, a composition is created if it does not exist;
     'composition' attribute is added to mqc entity result classes;
 - upgrade bower to 1.8.2 in travis
 - stop building on Travis under Perl 5.16,
   see https://rt.cpan.org/Public/Bug/Display.html?id=123310

release 64.1
 - SeqQC viewer - function to draw readonly representation of the
   utility flag
 - autoqc checks parect object - refactore to use a new factory for
   rpt list to composition transformation