@@ -1,6 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - utility QC feature: db tables, DBIx classes, retrieval
+ - Add STAR aligner bams as a valid RNA alignments - also added tests for it
 
 release 64.3.1
  - error in a statement for data update is fixed
